chore: fixed awkward clipping issue with hero section

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -219,11 +219,17 @@ h1 {
 }
 
 h1 span {
+  display: inline;
   background: var(--gradient);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  padding-inline: 0.08em;
+
+  padding-inline: 0.1em;
+  margin-inline: -0.1em;
+
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
 }
 
 @media (min-width: 1180px) {
